// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Automated Storybook Snapshots Components/common/TitreTypeSelect Default 1`] = `
<div>
  <div
    class="tablet-blobs"
  >
    <div
      class="tablet-blob-1-3 tablet-pt-s pb-s"
    >
      <h5>
        Domaine
      </h5>
    </div>
    <div
      class="mb tablet-blob-2-3"
    >
      <select
        class="p-s mr"
      >
        
        <option
          value="m"
        >
          minéraux et métaux
        </option>
        <option
          value="w"
        >
          granulats marins
        </option>
        <option
          value="c"
        >
          carrières
        </option>
        <option
          value="h"
        >
          hydrocarbures liquides ou gazeux
        </option>
        <option
          value="f"
        >
          combustibles fossiles
        </option>
        <option
          value="r"
        >
          éléments radioactifs
        </option>
        <option
          value="g"
        >
          géothermie
        </option>
        <option
          value="s"
        >
          stockages souterrains
        </option>
        <option
          value="i"
        >
          indéterminé
        </option>
        
      </select>
    </div>
  </div>
  <hr />
  <!--v-if-->
  <hr />
</div>
`;

exports[`Automated Storybook Snapshots Components/common/TitreTypeSelect Entreprise 1`] = `
<div>
  <div
    class="tablet-blobs"
  >
    <div
      class="tablet-blob-1-3 tablet-pt-s pb-s"
    >
      <h5>
        Domaine
      </h5>
    </div>
    <div
      class="mb tablet-blob-2-3"
    >
      <select
        class="p-s mr"
      >
        
        <option
          value="m"
        >
          minéraux et métaux
        </option>
        
      </select>
    </div>
  </div>
  <hr />
  <div
    class="tablet-blobs"
  >
    <div
      class="tablet-blob-1-3 tablet-pt-s pb-s"
    >
      <h5>
        Type
      </h5>
    </div>
    <div
      class="mb tablet-blob-2-3"
    >
      <select
        class="p-s mr"
      >
        
        <option
          value="arm"
        >
          autorisation de recherches
        </option>
        <option
          value="axm"
        >
          autorisation d'exploitation
        </option>
        
      </select>
    </div>
  </div>
  <hr />
</div>
`;
